Rename wrong things

--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -88,14 +88,14 @@ Players get VPs for:
 \subsection*{\MakeUppercase{Optional Rules}}
 \begin{itemize}
   \item After winning a Neutral Combat, you may Recruit one of the defeated Neutral Units for half the recruitment \svg{gold} rounded up (you may use only one Neutral Unit Recruited this way in a Combat).  % no-check-caps
-  \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage-red}, it gains a Corrosion token. That token is removed when that Unit takes damage.
+  \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage}, it gains a Corrosion token. That token is removed when that Unit takes damage.
   \item Additional Trading Post actions:
   \begin{itemize}
     \item You may Search (2) \svg{artifact} and \svg{pay_v2} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
-  \item In a 2-player game when a player gains VPs for controlling the Hill, that player also has to place 1 \svg{damage-red} to their most expensive Unit.
+  \item In a 2-player game when a player gains VPs for controlling the Hill, that player also has to place 1 \svg{damage} to their most expensive Unit.
 \end{itemize}
 
 \end{multicols}
