--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -397,9 +397,9 @@ msgid ""
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
 "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
 "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
+"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units and assign it to enemy Units.''\n"
 "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
+"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units.''\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -438,9 +438,9 @@ msgstr ""
 "  \\item Jeśli Bohater z Żetonem Graala podda się, Żeton Graala zostaje umieszczony na polu, na którym Bohater się poddał.\n"
 "  \\item Jeśli neutralna armia pokona Bohatera z Żetonem Graala, Żeton Graala zostaje umieszczony na polu, na którym Bohater został pokonany.\n"
 "  \\item Jeśli Bohater z Żetonem Graala rzuci Zaklęcie Magiczny Portal lub użyje budynku Wrót Wymiarów Frakcji Inferno, Żeton Graala zostaje umieszczony na polu, na którym rzucił Zaklęcie lub użył budynku.\n"
-"  \\item Żeton Graala zachowuje się jak Karta Długotrwała, która nie liczy się do limitu Kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą Rundę walki, jeśli Bohater jest \\textcolor{darkcandyapplered}{Rycerzem Krwi}, odrzuć Kartę, aby usunąć do 2 \\svg{damage-red} z twoich Jednostek i przypisać je wrogim Jednostkom.''\n"
+"  \\item Żeton Graala zachowuje się jak Karta Długotrwała, która nie liczy się do limitu Kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą Rundę walki, jeśli Bohater jest \\textcolor{darkcandyapplered}{Rycerzem Krwi}, odrzuć Kartę, aby usunąć do 2 \\svg{damage} z twoich Jednostek i przypisać je wrogim Jednostkom.''\n"
 "  \\item Bohater z Żetonem Graala, który posiada tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'', może zapłacić 10 \\svg{gold} lub 3 \\svg{valuables} na dowolnym polu Świątyni, aby oczyścić Graal. Umieść niebieską Kostkę Frakcji na Żetonie Graala, aby oznaczyć ten efekt.\n"
-"  \\item Po oczyszczeniu Żeton Graala zachowuje się jak Karta Długotrwała, która nie liczy się do limitu Kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą Rundę walki, jeśli Bohater jest \\textcolor{cobalt}{Rycerzem Graala}, odrzuć Kartę, aby usunąć do 2 \\svg{damage-red} z twoich Jednostek.''\n"
+"  \\item Po oczyszczeniu Żeton Graala zachowuje się jak Karta Długotrwała, która nie liczy się do limitu Kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą Rundę walki, jeśli Bohater jest \\textcolor{cobalt}{Rycerzem Graala}, odrzuć Kartę, aby usunąć do 2 \\svg{damage} z twoich Jednostek.''\n"
 "\\end{itemize}\n"
 "\n"
 
