--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -460,7 +460,7 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
 "spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
@@ -485,7 +485,7 @@ msgstr ""
 "to: \\begin{itemize} \\item Broń: Smok zyskuje atak zionięciem, który omiata "
 "trzy stworzenia w rzędzie. Jednostka bezpośrednio trafiona w środku "
 "otrzymuje pełne obrażenia, podczas gdy Jednostki po obu stronach cierpią o "
-"3\\,\\svg{damage-red} mniej. \\item Część zbroi, tarcza lub odzież: Smok "
+"3\\,\\svg{damage} mniej. \\item Część zbroi, tarcza lub odzież: Smok "
 "zyskuje 3\\,\\svg{defense}, oznaczane przez wolne Kostki Frakcji. Usuń je po "
 "wchłonięciu obrażeń. \\item Bibelot: Błękitny Smok ryczy i przywołuje burzę "
 "lodową, powodującą zamarzanie wszystkich istot z przerażenia. Skutkuje to "
@@ -560,9 +560,9 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage-red} based on the type of "
+"it, removing a certain amount of \\svg{damage} based on the type of "
 "Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage-red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
@@ -585,10 +585,10 @@ msgstr ""
 "Złotego Golema (losowo wybranego) w ostatnim rzędzie Planszy Walki.  \\item "
 "\\textit{Pożeranie Golemów:} Kryształowy Smok może pożerać Golemy, aby "
 "odzyskać zdrowie. W swojej turze, jeśli Kryształowy Smok sąsiaduje z "
-"Golemem, może go pożreć, usuwając określoną ilość \\svg{damage-red} w "
+"Golemem, może go pożreć, usuwając określoną ilość \\svg{damage} w "
 "zależności od typu pochłoniętego Golema: \\begin{itemize} \\item "
-"Pochłonięcie Złotego Golema: Usuń 2 \\svg{damage-red}.  \\item Pochłonięcie "
-"Diamentowego Golema: Usuń 4 \\svg{damage-red}.  \\item[] \\textbf{Uwaga:} "
+"Pochłonięcie Złotego Golema: Usuń 2 \\svg{damage}.  \\item Pochłonięcie "
+"Diamentowego Golema: Usuń 4 \\svg{damage}.  \\item[] \\textbf{Uwaga:} "
 "Kryształowy Smok może pochłonąć tylko jednego Golema na turę.  "
 "\\end{itemize} \\item Zdolności Golemów: Złote i Diamentowe Golemy nie "
 "posiadają żadnych specjalnych zdolności poza tymi określonymi na ich "
