--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -137,7 +137,7 @@ During this Scenario:
       If the Artifact is:
       \begin{itemize}
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
-          The Unit directly hit in the middle suffers full damage, while the Units on both sides suffer 3\,\svg{damage-red} less.
+          The Unit directly hit in the middle suffers full damage, while the Units on both sides suffer 3\,\svg{damage} less.
         \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction Cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
@@ -205,10 +205,10 @@ During this Scenario:
     \item At the start of every battle Round, check if any of the Golems were removed in the previous Round.
       If so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row of the battlefield.
     \item \textit{Golem Devour:} The Crystal Dragon can consume Golems to regain health.
-      During its Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage-red} based on the type of Golem consumed:
+      During its Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage} based on the type of Golem consumed:
       \begin{itemize}
-        \item Consuming a Gold Golem: Remove 2 \svg{damage-red}.
-        \item Consuming a Diamond Golem: Remove 4 \svg{damage-red}.
+        \item Consuming a Gold Golem: Remove 2 \svg{damage}.
+        \item Consuming a Diamond Golem: Remove 4 \svg{damage}.
         \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per Turn.
       \end{itemize}
     \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their Cards.
