--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -394,9 +394,9 @@ msgstr ""
 #| "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
 #| "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
 #| "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-#| "  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
+#| "  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units and assign it to enemy Units.''\n"
 #| "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-#| "  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
+#| "  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units.''\n"
 #| "\\end{itemize}\n"
 #| "\n"
 msgid ""
@@ -434,9 +434,9 @@ msgid ""
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
 "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
 "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
+"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units and assign it to enemy Units.''\n"
 "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
+"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units.''\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -475,9 +475,9 @@ msgstr ""
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s Žetonem Grálu, Žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
 "  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde bylo Kouzlo vyvoláno nebo použita budova.\n"
-"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Souboje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
+"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Souboje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
 "  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoliv místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
-"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Souboje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
+"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Souboje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage} z vašich Jednotek.}\n"
 "\\end{itemize}\n"
 "\n"
 
