--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -395,9 +395,9 @@ msgid ""
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
 "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
 "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
+"  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units and assign it to enemy Units.''\n"
 "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
-"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
+"  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage} from your Units.''\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -437,9 +437,9 @@ msgstr ""
 "  \\item Si une Armée Neutre bat le Héros avec le Graal, le Jeton est posé sur la case où le Héros a été battu.\n"
 "  \\item Si un Héros avec le Graal lance Portail de Ville ou utilise le Bâtiment de Faction Hadès, le Jeton est placé sur la case où le Sort a été lancé ou le Bâtiment utilisé.\n"
 "\\columnbreak\n"
-"  \\item Le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant quand si joué: «$\\infty$ Un fois durant un Combat, si le Héros est \\textcolor{darkcandyapplered}{Chevalier Sanglant}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage-red} d'un de vos Unités et les assigner aux Unités ennemies.»\n"
+"  \\item Le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant quand si joué: «$\\infty$ Un fois durant un Combat, si le Héros est \\textcolor{darkcandyapplered}{Chevalier Sanglant}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage} d'un de vos Unités et les assigner aux Unités ennemies.»\n"
 "  \\item Un Héros avec le Graal et le titre «\\textcolor{cobalt}{Grail Knight}» peut payer 10 \\svg{gold} ou 3 \\svg{valuables} à un Temple pour purifier le Graal. Placez un Cube de Faction bleu sur le Jeton Graal pour indiquer cet effet.\n"
-"  \\item Un fois purifié, le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant si joué: «$\\infty$ Une fois par Tour de Combat, si le Héros est \\textcolor{cobalt}{Chevalier du Graal}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage-red} de vos Unités.»\n"
+"  \\item Un fois purifié, le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant si joué: «$\\infty$ Une fois par Tour de Combat, si le Héros est \\textcolor{cobalt}{Chevalier du Graal}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage} de vos Unités.»\n"
 "\\end{itemize}\n"
 "\n"
 
