--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -459,7 +459,7 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
 "spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
@@ -483,7 +483,7 @@ msgstr ""
 "hromádky odhozených artefaktů. Pokud je artefakt: \\begin{itemize} \\item "
 "Zbraň: Drak získá jeden Dechový útok, který zasáhne tři Jednotky v řadě. "
 "Jednotka přímo zasažená uprostřed utrpí plné poškození, zatímco Jednotky po "
-"obou stranách utrpí o 3\\,\\svg{damage-red} méně. \\item Kus brnění, štítu "
+"obou stranách utrpí o 3\\,\\svg{damage} méně. \\item Kus brnění, štítu "
 "nebo oblečení: Drak získá 3\\,\\svg{defense}, což je znázorněno náhradními "
 "Kostičkami Frakce. Odstraňte je poté, co absorbují poškození. \\item Cetka: "
 "Azurový Drak zařve a přivolá ledovou bouři, která způsobí, že všechny "
@@ -558,9 +558,9 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage-red} based on the type of "
+"it, removing a certain amount of \\svg{damage} based on the type of "
 "Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage-red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
@@ -583,9 +583,9 @@ msgstr ""
 "poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
 "může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
 "Krystalový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
-"určité množství \\svg{damage-red} podle typu sežraného Golema: "
-"\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage-red}. \\item "
-"Diamantový Golem: Odstraňte 4 \\svg{damage-red}. \\item[] "
+"určité množství \\svg{damage} podle typu sežraného Golema: "
+"\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage}. \\item "
+"Diamantový Golem: Odstraňte 4 \\svg{damage}. \\item[] "
 "\\textbf{Poznámka:} Krystalový Drak může během svého tahu sežrat pouze "
 "jednoho Golema. \\end{itemize} \\item Schopnosti Golemů: Zlatí a Diamantoví "
 "Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
