--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -460,7 +460,7 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
 "spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
@@ -484,7 +484,7 @@ msgstr ""
 "défaussés.  Si l'Artefact est: \\begin{itemize} \\item Une Arme: Le Dragon "
 "gagne un Souffle qui cible trois créatures en ligne.  L'Unité directement "
 "touchée subit les dégâts maximum, les Unités de chaque côté subissent 3\\,"
-"\\svg{damage-red} de moins.  \\item Une Armure, Bouclier ou Vêtement: Le "
+"\\svg{damage} de moins.  \\item Une Armure, Bouclier ou Vêtement: Le "
 "Dragon gagne 3\\,\\svg{defense}, représenté par des Cubes de Faction.  "
 "Retirez-les après qu'ils aient absorbés des dégâts.  \\item Un Bijou: Le "
 "Dragon rugit et invoque une tempête de glace, glaçant de peur toutes "
@@ -559,9 +559,9 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage-red} based on the type of "
+"it, removing a certain amount of \\svg{damage} based on the type of "
 "Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage-red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
@@ -583,9 +583,9 @@ msgstr ""
 "d'or ou de Diamant au hasard sur la ligne arrière du Plateau.  \\item "
 "\\textit{Absorption de Golem:} Le Dragon peut absorber des Golems pour se "
 "régénérer.  Pendant son Tour, si le Dragon est adjacent à un Golem, il peut "
-"choisir de l'absorber pour retirer un nombre de \\svg{damage-red} en "
+"choisir de l'absorber pour retirer un nombre de \\svg{damage} en "
 "fonction du type de Golem: \\begin{itemize} \\item Golem d'Or: Retirez 2 "
-"\\svg{damage-red}.  \\item Golem de Diamant: Retirez 4 \\svg{damage-red}.  "
+"\\svg{damage}.  \\item Golem de Diamant: Retirez 4 \\svg{damage}.  "
 "\\item[] \\textbf{Note:} Le Dragon ne peut absorber qu'un Golem par Tour.  "
 "\\end{itemize} \\item Capacités de Golem: Les Golems d'Or et de Diamant "
 "n'ont pas d'autres capacités que celle de leurs Cartes.  Ils servent "
