--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -353,7 +353,7 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
 "spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
@@ -410,9 +410,9 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage-red} based on the type of "
+"it, removing a certain amount of \\svg{damage} based on the type of "
 "Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage-red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
