--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-07-05 00:39+0200\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -98,7 +98,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -114,7 +114,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -394,7 +394,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: clash/the_hunt.tex:96 sections/random_scenario.tex:61
+#: clash/the_hunt.tex:96 sections/random_scenario.tex:59
 #, no-wrap
 msgid ""
 "\\medskip\n"
@@ -459,9 +459,9 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
-"shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
-"spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, shield, "
+"or clothing: The Dragon gains 3\\,\\svg{defense}, represented with spare "
+"Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
 "creatures to freeze in fear.  This results in every Unit moving only 1 Field "
 "per Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
@@ -483,8 +483,8 @@ msgstr ""
 "hromádky odhozených artefaktů. Pokud je artefakt: \\begin{itemize} \\item "
 "Zbraň: Drak získá jeden Dechový útok, který zasáhne tři Jednotky v řadě. "
 "Jednotka přímo zasažená uprostřed utrpí plné poškození, zatímco Jednotky po "
-"obou stranách utrpí o 3\\,\\svg{damage} méně. \\item Kus brnění, štítu "
-"nebo oblečení: Drak získá 3\\,\\svg{defense}, což je znázorněno náhradními "
+"obou stranách utrpí o 3\\,\\svg{damage} méně. \\item Kus brnění, štítu nebo "
+"oblečení: Drak získá 3\\,\\svg{defense}, což je znázorněno náhradními "
 "Kostičkami Frakce. Odstraňte je poté, co absorbují poškození. \\item Cetka: "
 "Azurový Drak zařve a přivolá ledovou bouři, která způsobí, že všechny "
 "bytosti zamrznou strachem. To má za následek, že každá Jednotka se pohybuje "
@@ -543,6 +543,32 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:219
+#, fuzzy
+#| msgid ""
+#| "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
+#| "entirely from red crystal and brought to life through magical means, the "
+#| "Crystal Dragon is literally semitransparent, lit from the center by its "
+#| "magical heart.  Used frequently as a training tool for young dragon "
+#| "slayers, many wizards also create these creatures for the crystal they "
+#| "shed.  } \\medskip \\textbf{Fighting the Crystal Dragon:} "
+#| "\\begin{enumerate} \\item Place the Crystal Dragon Miniature/Card on the "
+#| "battlefield.  Ignore its ability.  \\item Place two Gold Golems and two "
+#| "Diamond Golems on the battlefield.  \\end{enumerate} \\medskip "
+#| "\\textbf{Rules:} \\begin{itemize} \\item At the start of every battle "
+#| "Round, check if any of the Golems were removed in the previous Round.  If "
+#| "so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row "
+#| "of the battlefield.  \\item \\textit{Golem Devour:} The Crystal Dragon "
+#| "can consume Golems to regain health.  During its Turn, if the Crystal "
+#| "Dragon is adjacent to a Golem, it can choose to consume it, removing a "
+#| "certain amount of \\svg{damage} based on the type of Golem consumed: "
+#| "\\begin{itemize} \\item Consuming a Gold Golem: Remove 2 \\svg{damage}.  "
+#| "\\item Consuming a Diamond Golem: Remove 4 \\svg{damage-red}.  \\item[] "
+#| "\\textbf{Note:} The Crystal Dragon can only consume one Golem per Turn.  "
+#| "\\end{itemize} \\item Golem Abilities: Gold and Diamond Golems do not "
+#| "possess any additional abilities beyond those specified on their Cards.  "
+#| "They primarily serve as fodder for the Crystal Dragon's health "
+#| "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
+#| "battle Round.  \\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
 "entirely from red crystal and brought to life through magical means, the "
@@ -558,13 +584,13 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage} based on the type of "
-"Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
-"red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
-"Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
-"Golems do not possess any additional abilities beyond those specified on "
-"their Cards.  They primarily serve as fodder for the Crystal Dragon's health "
+"it, removing a certain amount of \\svg{damage} based on the type of Golem "
+"consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage}.  "
+"\\item[] \\textbf{Note:} The Crystal Dragon can only consume one Golem per "
+"Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond Golems do not "
+"possess any additional abilities beyond those specified on their Cards.  "
+"They primarily serve as fodder for the Crystal Dragon's health "
 "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle Round.  \\end{itemize} }"
 msgstr ""
@@ -583,15 +609,14 @@ msgstr ""
 "poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
 "může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
 "Krystalový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
-"určité množství \\svg{damage} podle typu sežraného Golema: "
-"\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage}. \\item "
-"Diamantový Golem: Odstraňte 4 \\svg{damage}. \\item[] "
-"\\textbf{Poznámka:} Krystalový Drak může během svého tahu sežrat pouze "
-"jednoho Golema. \\end{itemize} \\item Schopnosti Golemů: Zlatí a Diamantoví "
-"Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
-"jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
-"Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
-"za Kolo Souboje. \\end{itemize} }"
+"určité množství \\svg{damage} podle typu sežraného Golema: \\begin{itemize} "
+"\\item Zlatý Golem: Odstraňte 2 \\svg{damage}. \\item Diamantový Golem: "
+"Odstraňte 4 \\svg{damage}. \\item[] \\textbf{Poznámka:} Krystalový Drak může "
+"během svého tahu sežrat pouze jednoho Golema. \\end{itemize} \\item "
+"Schopnosti Golemů: Zlatí a Diamantoví Golemové nemají žádné další schopnosti "
+"nad rámec těch, které jsou uvedeny na jejich kartách. Slouží především jako "
+"potrava pro regeneraci zdraví Krystalového Draka. \\item Krystalový Drak má "
+"\\textit{Odvetný útok dvakrát} za Kolo Souboje. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:246
