--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-07-05 00:39+0200\n"
 "PO-Revision-Date: 2025-06-23 13:01+0000\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -98,7 +98,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -114,7 +114,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -330,7 +330,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: clash/the_hunt.tex:96 sections/random_scenario.tex:61
+#: clash/the_hunt.tex:96 sections/random_scenario.tex:59
 #, no-wrap
 msgid ""
 "\\medskip\n"
@@ -384,9 +384,9 @@ msgid ""
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
-"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, "
-"shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
-"spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
+"both sides suffer 3\\,\\svg{damage} less.  \\item A piece of armor, shield, "
+"or clothing: The Dragon gains 3\\,\\svg{defense}, represented with spare "
+"Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
 "creatures to freeze in fear.  This results in every Unit moving only 1 Field "
 "per Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
@@ -441,13 +441,13 @@ msgid ""
 "(chosen randomly) in the last row of the battlefield.  \\item \\textit{Golem "
 "Devour:} The Crystal Dragon can consume Golems to regain health.  During its "
 "Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume "
-"it, removing a certain amount of \\svg{damage} based on the type of "
-"Golem consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
-"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-"
-"red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
-"Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
-"Golems do not possess any additional abilities beyond those specified on "
-"their Cards.  They primarily serve as fodder for the Crystal Dragon's health "
+"it, removing a certain amount of \\svg{damage} based on the type of Golem "
+"consumed: \\begin{itemize} \\item Consuming a Gold Golem: Remove 2 "
+"\\svg{damage}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage}.  "
+"\\item[] \\textbf{Note:} The Crystal Dragon can only consume one Golem per "
+"Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond Golems do not "
+"possess any additional abilities beyond those specified on their Cards.  "
+"They primarily serve as fodder for the Crystal Dragon's health "
 "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle Round.  \\end{itemize} }"
 msgstr ""
