--- a/translations/title_page.tex/cs.po
+++ b/translations/title_page.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-27 09:55+0200\n"
+"POT-Creation-Date: 2025-07-05 00:39+0200\n"
 "PO-Revision-Date: 2025-05-04 14:04+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -59,8 +59,8 @@ msgid ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
-"defense-yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
+"{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense-"
+"yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
 msgstr ""
 "\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
 "\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
@@ -68,5 +68,5 @@ msgstr ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
-"defense-yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
+"{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense-"
+"yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
